pkg/lang/testdata/ub/file/factory/valid/core-namespace-call.ub
outputs: {
  shout: { value: @core.b64-encode('hi') }
}
