pkg/lang/testdata/ub/file/factory/invalid/bare-call.ub
outputs: {
  shout: { value: format('%s', var.name) }
}
